--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ input[type=number] {
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
-    background-color: #34006a;
+    background-color: #b32424;
 }
 
 .budget-container .app-title{
@@ -142,7 +142,7 @@ input[type=number] {
     display: inline-block;
     cursor: pointer;
     font-size: 1.1em;
-    color: #1a0034;
+    color: #c60e0e;
     font-family: 'Gilroy Bold';
     opacity: 0.4;
 }
